# rexile

./: .gitignore  AGENTS.md  BENCHMARK_ANALYSIS.md  BENCHMARK_COMPARISON.md  CHANGELOG.md  Cargo.toml  FEATURE_STATUS.md  LICENSE-MIT  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ISSUES_ANALYSIS.md  PERFORMANCE_RESULTS.md  PHASE2_COMPLETE.md  PHASE5_STATUS.md  PHASE6_SUMMARY.md  PHASE7_8_FOUNDATION.md  PHASE7_COMPLETE_SUMMARY.md  README.md  REXILE_VS_REGEX_COMPARISON.md  ROADMAP_FULL_REGEX.md  ROUND4_SPECIALIZED_MATCHERS.md  TOM_TAT_TOI_UU_HOA.md  benchmark_comparison.txt  benchmark_comparison_optimized.txt  benchmark_final_results.txt  benchmark_round4_specialized.txt  test_parse_group
.github/workflows/: rust.yml
benches/: README.md  bench_rexile.rs  comparison_benchmark.rs  quick_comparison.rs  rexile_benchmark.rs  rexile_vs_regex_benchmark.rs
examples/: README.md  basic_usage.rs  captures_replace_split.rs  char_class_demo.rs  char_classes.rs  check_patterns.rs  check_prefix.rs  comprehensive.rs  comprehensive_test.rs  debug_alt_greedy.rs  debug_alt_structure.rs  debug_alt_with_caps.rs  debug_alternation.rs  debug_boundary_parse.rs  debug_bugs.rs  debug_capture_parse.rs  debug_captures.rs  debug_captures2.rs  debug_digit.rs  debug_dotstar.rs  debug_failing_tests.rs  debug_grl_detailed.rs  debug_grl_progressive.rs  debug_grl_step.rs  debug_hello_b.rs  debug_isolate.rs  debug_long.rs  debug_match_length.rs  debug_nested_captures.rs  debug_parse_alt_caps.rs  debug_pattern.rs  debug_range_quantifier.rs  debug_sequence_match.rs  debug_simple_a.rs  debug_simple_backtrack.rs  demo.rs  escape_demo.rs  find_all.rs  flags.rs  group_demo.rs  (+57 more)
scripts/: memory_comparison.py
src/: boundary.rs  captures.rs  charclass.rs  escape.rs  group.rs  lib.rs  lookaround.rs  quantifier.rs  sequence.rs  sequence_parser.rs
src/advanced/: captures.rs  lookaround.rs  mod.rs
src/engine/: capture_dfa.rs  dfa.rs  lazy_dfa.rs  mod.rs  nfa.rs  simple_nfa.rs
src/optimization/: fast_path.rs  literal.rs  mod.rs  prefilter.rs
src/parser/: boundary.rs  charclass.rs  escape.rs  flags.rs  group.rs  mod.rs  quantifier.rs  (+2 more)
tests/: group_integration_tests.rs  parity_examples.rs  test_captures.rs  test_combined_lookaround.rs  test_differential_regex.rs  test_lookaround.rs  test_range_quantifiers.rs  test_replace_split.rs  test_unicode.rs  test_word_boundaries.rs
