[package]
name = "rexile"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "ReXile — a fast regex-lite engine built on memchr and aho-corasick (zero regex crate dependency)"

[lib]
name = "rexile"
path = "src/lib.rs"

[dependencies]
# Core building blocks - NO regex crate!
memchr = "2.7"
aho-corasick = "1.1"

# Optional SIMD support for character classes
# packed_simd can be enabled for even faster character class matching
# Currently using stdlib + memchr SIMD which is already very fast

[dev-dependencies]
criterion = "0.5"
regex = "1"  # For benchmark comparisons only

[[bench]]
name = "rexile_benchmark"
harness = false

[[bench]]
name = "comparison_benchmark"
harness = false

[[bench]]
name = "rexile_vs_regex_benchmark"
harness = false

[[bench]]
name = "quick_comparison"
harness = false

[workspace]
