[package]
name = "rexile"
version = "0.4.8"
edition = "2021"
authors = ["Ton That Vu <ttvuhm@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A blazing-fast regex engine with 10-100x faster compilation and competitive matching performance - now with range quantifiers {n,m}, case-insensitive (?i), and full production-ready features"
repository = "https://github.com/KSD-CO/rexile"
documentation = "https://docs.rs/rexile"
homepage = "https://github.com/KSD-CO/rexile"
keywords = ["regex", "pattern", "matching", "parser", "lexer"]
categories = ["text-processing", "parsing", "algorithms"]
readme = "README.md"
rust-version = "1.70"

[lib]
name = "rexile"
path = "src/lib.rs"

[dependencies]
# Core building blocks - NO regex crate!
memchr = "2.7"
aho-corasick = "1.1"

[dev-dependencies]
criterion = "0.5"
regex = "1"  # For benchmark comparisons only

[[bench]]
name = "rexile_benchmark"
harness = false

[workspace]
